--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,12 +9,31 @@ body {
 
 #container {
     width: 50%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
 }
 
+#cabecera {
+    background: darkorange;
+    box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.75);
+    color: darkslateblue;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline {
+    padding: 1em 0 0 0;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container h1 {
     font-size: 20px;
+}
+
+#post {
+    padding: 1em;
 }
