--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,5 +1,5 @@
 body {
-    color: darkkhaki;
+    color: blue;
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 16px;
